fix for spacing around searchbox

--- a/web/themes/custom/asulib_barrio/scss/components/search-form.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/search-form.scss
@@ -25,6 +25,10 @@ nav #search-form {
 
 }
 
+.search-home-form fieldset.form-group {
+    margin-bottom: 0;
+}
+
 .search-home-form, .bento-home-search-form {
     margin-top: 40px;
     margin-bottom: 40px;
